# finder_definitivo

./: .gitignore  CAMBIAR_STRIPE_DE_TEST_A_LIVE_2026-04-14.md  COMO_HE_PUBLICADO_LA_NUEVA_VERSION_2026-04-14.md  CONTEXTO_BUSQUEDA_CATALOGO_DESKTOP_2026-04-28.md  CONTEXTO_IDEA_DUMPS_DISCOGS_2026-04-16.txt  CONTEXT_2026-05-01.md  DIAGRAMA_TECNICO_PROJECT_3_4.md  DOCUMENTACION_TECNICA_PROJECT_3_4.md  HETZNER_CATALOG_API_DEPLOY.md  INCIDENCIAS_UPDATES_DESKTOP_2026-04-14.md  MANUAL_OPERATIVO_PROJECT_3_4.md  MOBILE_APP_PLAN.md  PROJECT_3_4_contexto_futuro.txt  README.md  RESUMEN_CONVERSACION_DUMPS_Y_POSTGRESQL_2026-04-16.txt  REVISION_FALTANTES_PRODUCCION_PROJECT_3_4.md  app.py  launch-desktop-app.cmd  start-desktop-updater-test.cmd  start-updater-test-server.cmd
api/: .env  catalog_search.py  main.py  requirements.txt
catalog/: README.md  import_discogs_dump.py
catalog/sql/: 00_create_database.sql  01_schema.sql  02_indexes.sql  03_refresh_derived.sql  04_sample_queries.sql
core/: constants.py  discogs_client.py  models.py  search.py
supabase/migrations/: 20260313_create_profiles.sql  20260313_create_user_releases.sql  20260313_extend_user_releases_metadata.sql  20260401_add_avatar_to_profiles.sql  20260401_create_user_access_and_subscriptions.sql  20260401_create_user_searches.sql  20260401_extend_profiles_access_flags.sql  20260413_add_admin_metrics_read_policies.sql  20260413_create_billing_invoices_and_events.sql  (+4 more)
web/frontend/src-tauri/: Cargo.toml  tauri.conf.json
web/frontend/src-tauri/capabilities/: default.json
web/frontend/src-tauri/src/: lib.rs  main.rs
(+59 files in other folders)
